Mission 6: Role-based admin protection for destination management